added react app project

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         /></a>
       </div>
       <ul class="navbar__list">
-        <li class="navbar__item">
+        <!-- <li class="navbar__item">
           <a href="#about" class="navbar__link">About</a>
-        </li>
+        </li> -->
         <li class="navbar__item">
           <a href="#projects" class="navbar__link">Projects</a>
         </li>
         <li class="navbar__item">
-          <a href="mailto:megan-bailey@outlook.com" class="navbar__link"
+          <a href="mailto:megan-bailey&commat;outlook&period;com" class="navbar__link"
             ><svg
               width="1em"
               height="1em"
@@ -93,7 +93,7 @@
             Have any questions, or would like to work together? Shoot me an email.
           </p>
 
-          <a href="mailto:megan-bailey@outlook.com" class="contact-block__link"
+          <a href="mailto:megan-bailey&commat;outlook&period;com" class="contact-block__link"
             ><svg
               width="1em"
               height="1em"
@@ -113,13 +113,57 @@
       <!-- CARDS/PROJECT GALLERY -->
       <section class="section-projects" id="projects">
         <div class="cards-container">
+
           <div class="cards-block">
             <div class="card">
-              <img
+              <a
+                    href="https://getaway-v1-mlb.netlify.app/"
+                    target="_blank"
+                    
+                  ><img
+                src="img/getaway-reactapp.png"
+                alt="Getaway Travel React App"
+                class="card__img"
+              /></a>
+              <div class="card__details">
+                <h2 class="card__title">Getaway Travel v1</h2>
+                <h3 class="card__subtitle">React App</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SCSS / ReactJS
+                </p>
+                <p class="card__text">
+                  Basic React app for social travel site. <em>Database changes are not persistent on this version.</em>
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://getaway-v1-mlb.netlify.app/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://github.com/mega-bailey/getaway-v1"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    GitHub</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <a
+                    href="https://play-atx.herokuapp.com/"
+                    target="_blank"
+                  ><img
                 src="img/play-atx.png"
                 alt="Play ATX site"
                 class="card__img"
-              />
+              /></a>
               <div class="card__details">
                 <h2 class="card__title">Play ATX</h2>
                 <h3 class="card__subtitle">Custom Static Site</h3>
@@ -128,7 +172,7 @@
                   HTML / SCSS / JS Parallax
                 </p>
                 <p class="card__text">
-                  Playful and informational single page business website.
+                  Single page business website.
                 </p>
                 <div class="btn-container margin-top-s">
                   <a
@@ -143,7 +187,7 @@
                     target="_blank"
                     class="btn btn__text"
                   >
-                    Code</a
+                    GitHub</a
                   >
                 </div>
               </div>
@@ -179,7 +223,7 @@
                     target="_blank"
                     class="btn btn__text"
                   >
-                    Code</a
+                    GitHub</a
                   >
                 </div>
               </div>
@@ -187,11 +231,14 @@
           </div> -->
           <div class="cards-block">
             <div class="card">
-              <img
+              <a
+                    href="https://6sense.netlify.app/"
+                    target="_blank"
+                  ><img
                 src="img/six-sense.png"
                 alt="Six Sense ecommerce site"
                 class="card__img"
-              />
+              /></a>
               <div class="card__details">
                 <h2 class="card__title">Six Sense</h2>
                 <h3 class="card__subtitle">Ecommerce Site</h3>
@@ -215,7 +262,7 @@
                     target="_blank"
                     class="btn btn__text"
                   >
-                    Code</a
+                    GitHub</a
                   >
                 </div>
               </div>
@@ -223,11 +270,14 @@
           </div>
           <div class="cards-block">
             <div class="card">
-              <img
+              <a
+                    href="https://mega-bailey.github.io/union-hill/"
+                    target="_blank"
+                  ><img
                 src="img/union-hill.png"
-                alt="Chef Blog WordPress Theme"
+                alt="Union Hill Restaurant Site"
                 class="card__img"
-              />
+              /></a>
               <div class="card__details">
                 <h2 class="card__title">Union Hill</h2>
                 <h3 class="card__subtitle">Custom Static Site</h3>
@@ -251,7 +301,7 @@
                     target="_blank"
                     class="btn btn__text"
                   >
-                    Code</a
+                    GitHub</a
                   >
                 </div>
               </div>
@@ -259,11 +309,14 @@
           </div>
           <div class="cards-block">
             <div class="card">
-              <img
+              <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                  ><img
                 src="img/weather-wise.png"
                 alt="Weather-Wise App"
                 class="card__img"
-              />
+              /></a>
               <div class="card__details">
                 <h2 class="card__title">Weather-Wise</h2>
                 <h3 class="card__subtitle">Weather App</h3>
@@ -288,7 +341,7 @@
                     target="_blank"
                     class="btn btn__text"
                   >
-                    Code</a
+                    GitHub</a
                   >
                 </div>
               </div>
@@ -296,11 +349,15 @@
           </div>
           <div class="cards-block">
             <div class="card">
-              <img
+              <a
+              href="https://habitual-app-mlb.herokuapp.com/"
+              target="_blank"
+              
+            > <img
                 src="img/habitual.png"
                 alt="Habitual app"
                 class="card__img"
-              />
+              /></a>
               <div class="card__details">
                 <h2 class="card__title">Habitual</h2>
                 <h3 class="card__subtitle">Habit Tracking App</h3>
@@ -309,7 +366,7 @@
                   HTML / SCSS / JS / jQuery
                 </p>
                 <p class="card__text">
-                  Simple app to help track your habits.
+                  Simple app to help track your habits. <em>Changes are not persistent.</em>
                 </p>
                 <div class="btn-container margin-top-s">
                   <a
@@ -324,7 +381,7 @@
                     target="_blank"
                     class="btn btn__text"
                   >
-                    Code</a
+                    GitHub</a
                   >
                 </div>
               </div>
@@ -340,7 +397,7 @@
             Questions, comments, kudos, or concerns? Email me.
           </p>
 
-          <a href="mailto:megan-bailey@outlook.com" class="contact-block__link"
+          <a href="mailto:megan-bailey&commat;outlook&period;com" class="contact-block__link"
             ><svg
               width="1em"
               height="1em"
@@ -359,7 +416,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="copyright">© 2020 Megan Bailey</p>
+      <p class="copyright">© 2021 Megan Bailey</p>
     </footer>
   </body>
 </html>
