Updated URL for Play ATX

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="cards-block">
             <div class="card">
               <a
-                    href="https://play-atx.herokuapp.com/"
+                    href="https://play-atx.netlify.app/"
                     target="_blank"
                   ><img
                 src="img/play-atx.png"
@@ -176,7 +176,7 @@
                 </p>
                 <div class="btn-container margin-top-s">
                   <a
-                    href="https://play-atx.herokuapp.com/"
+                    href="https://play-atx.netlify.app/"
                     target="_blank"
                     class="btn btn__text"
                   >
